--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -17,16 +17,16 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+        cache: 'npm'
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
 
     - name: Build
-      run: yarn build
+      run: npm run build
 
     - name: Generate
-      run: yarn generate
+      run: npm run generate
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
