--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "vue-indent-pug-loader": "^0.1.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
